--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <p>Ela abrange diversas áreas, como:</p>
       <ul>
         <li>Vacinação e campanhas preventivas</li>
-        <li>Saneamento básico e controle ambiental</li>git 
+        <li>Saneamento básico e controle ambiental</li>
         <li>Educação em saúde</li>
         <li>Monitoramento de doenças transmissíveis</li>
         <li>Gestão de hospitais e unidades básicas de saúde</li>
