--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
   <main>
     <section class="hero">
-      <img src="https://images.unsplash.com/photo-1588776814546-d4a8bdeed7a6?auto=format&fit=crop&w=800&q=80" alt="Profissional de saúde com máscara" />
+      <img src="assets/Profissionais de saúde.jpg" alt="Profissionais de saúde" />
       <div class="hero-text">
         <h2>Cuide da sua saúde e da sua comunidade</h2>
         <p>Informações confiáveis e atualizadas sobre saúde pública para você e sua família.</p>
@@ -57,3 +57,4 @@
   </footer>
 </body>
 </html>
+    
